--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-<input type="text" [(ngModel)]="username" />
-<p>{{ 'username: ' + username }}</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <label>username</label>
+      <br>
+      <input type="text" class="form-control" [(ngModel)]="username" />
+      <p>{{ username }}</p>
+      <button
+        class="btn btn-primary"
+        [disabled]="username === ''"
+        (click)="username = ''"
+      >Reset</button>
+    </div>
+  </div>
+</div>
